--- a/tugasmcc.html
+++ b/tugasmcc.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="tugas mcc.html">Home</a>
+        <a href="tugasmcc.html">Home</a>
       </div>
       <input type="checkbox" id="click" />
       <label for="click" class="mainicon">
@@ -31,7 +31,7 @@
       </label>
       <nav>
         <a href="tugasmcc.html" class="active"><<</a>
-        <a href="project.html">></a>
+        <a href="index.html">></a>
       </nav>
     </header>
 
