--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="tugas mcc.html">TAHU GEJROT</a>
+      <a href="tugasmcc.html">TAHU GEJROT</a>
     </div>
     <input type="checkbox" id="click" />
     <label for="click" class="mainicon">
@@ -23,8 +23,8 @@
       </div>
     </label>
     <nav>
-      <a href="tugas mcc.html"><</a>
-          <a href="project.html" class="active">>></a>
+      <a href="tugasmcc.html"><</a>
+          <a href="index.html" class="active">>></a>
     </nav>
   </header>
   <section>
